--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Porfolio Site",
+  "name": "porfolio",
   "description": "Portfolio of Chuck Prystupa",
   "version": "1.0.0",
   "author": "Chuck Prystupa",
