--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "version": "1.1.0",
   "author": "Chuck Prystupa",
   "dependencies": {
-    "gatsby": "^2.20.12",
-    "gatsby-plugin-google-gtag": "^2.8.0",
-    "gatsby-plugin-manifest": "^2.3.3",
-    "gatsby-plugin-offline": "^3.1.2",
-    "gatsby-plugin-react-helmet": "^3.2.1",
-    "gatsby-plugin-sass": "^2.2.1",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1",
-    "react-images": "^1.0.0",
+    "gatsby": "^3.5.1",
+    "gatsby-plugin-google-gtag": "^3.5.0",
+    "gatsby-plugin-manifest": "^3.5.0",
+    "gatsby-plugin-offline": "^4.5.1",
+    "gatsby-plugin-react-helmet": "^4.5.0",
+    "gatsby-plugin-sass": "^4.5.0",
+    "node-sass": "^6.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-images": "^1.2.0-beta.7",
     "uuid": "^8.3.2"
   },
   "keywords": [
