--- a/package.json
+++ b/package.json
@@ -1,39 +1,31 @@
 {
-  "name": "porfolio",
-  "description": "Portfolio of Chuck Prystupa",
-  "version": "1.1.0",
-  "author": "Chuck Prystupa",
-  "dependencies": {
-    "gatsby": "^3.5.1",
-    "gatsby-plugin-google-gtag": "^3.5.0",
-    "gatsby-plugin-manifest": "^3.5.0",
-    "gatsby-plugin-offline": "^4.5.1",
-    "gatsby-plugin-react-helmet": "^4.5.0",
-    "gatsby-plugin-sass": "^4.5.0",
-    "node-sass": "^6.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
-    "react-images": "^1.2.0-beta.7",
-    "uuid": "^8.3.2"
-  },
+  "name": "portfolio-v2",
+  "version": "1.0.0",
+  "private": true,
+  "description": "portfolio-v2",
+  "author": "C Prystupa",
   "keywords": [
     "gatsby"
   ],
-  "license": "MIT",
   "scripts": {
+    "develop": "gatsby develop",
+    "start": "gatsby develop",
     "build": "gatsby build",
-    "develop": "gatsby develop -H 0.0.0.0",
-    "format": "prettier --write \"**/*.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gatsby build && gh-pages -d public -b master"
+    "serve": "gatsby serve",
+    "clean": "gatsby clean"
   },
-  "devDependencies": {
-    "gh-pages": "^3.1.0",
-    "prettier": "^2.0.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+  "dependencies": {
+    "@mdx-js/react": "^3.0.1",
+    "gatsby": "^5.13.5",
+    "gatsby-plugin-image": "^3.13.1",
+    "gatsby-plugin-mdx": "^5.13.1",
+    "gatsby-plugin-sass": "^6.13.1",
+    "gatsby-plugin-sharp": "^5.13.1",
+    "gatsby-plugin-sitemap": "^6.13.1",
+    "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-sharp": "^5.13.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.77.8"
   }
 }
