--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,24 @@
-# Project dependencies
-.cache
-node_modules
-yarn-error.log
-package-lock.json
-yarn.lock
+# build output
+dist/
+# generated types
+.astro/
 
-# Build directory
-/public
+# dependencies
+node_modules/
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+
+# environment variables
+.env
+.env.production
+
+# macOS-specific files
 .DS_Store
+
+# jetbrains setting folder
+.idea/
