--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "deploy": "astro check && astro build && gh-pages -d dist -b master"
+    "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.6",
